2005-05-06  Derek Price  <derek@ximbiot.com>

	* getopt.m4: Update from GNULIB.  Closes cvshome.org issue #248.

2005-05-03  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* clock_time.m4, gnulib.m4, lstat.m4, mkstemp.m4, nanosleep.m4,
	stat-macros.m4: Updated.
	* unistd-safer.m4: New file.

2005-05-01  Mark D. Baushke  <mdb@cvshome.org>

	* mmap-anon.m4: Update from GNULIB.

2005-04-25  Derek Price  <derek@ximbiot.com>

	* getpass.m4, gettext.m4: Update from GNULIB.

2005-03-29  Mark D. Baushke  <mdb@cvshome.org>

	* getcwd-path-max.m4: Update from GNULIB.

2005-03-22  Mark D. Baushke  <mdb@cvshome.org>

	* chdir-long.m4, closeout.m4, dirname.m4, exitfail.m4,
	fpending.m4, getcwd.m4, getdate.m4, getline.m4, getpagesize.m4,
	getpass.m4, gettext.m4, gnulib.m4, lib-link.m4, md5.m4,
	memrchr.m4, nanosleep.m4, nls.m4, pathmax.m4, po.m4, quotearg.m4,
	stat-macros.m4, stdint.m4, strftime.m4, timespec.m4,
	unlocked-io.m4, xalloc.m4, yesno.m4: Update from GNULIB.

2005-03-10  Mark D. Baushke  <mdb@cvshome.org>

	* save-cwd.m4: Update from GNULIB.

2005-03-07  Mark D. Baushke  <mdb@cvshome.org>

	* mmap-anon.m4: Update from GNULIB.

2005-03-03  Derek Price  <derek@ximbiot.com>

	* mmap-anon.m4, pagealign_alloc.m4: New files from GNULIB.

2005-03-02  Jim Meyering  <jim@meyering.net>

	* closeout.m4, fpending.m4, mbrtowc.m4, quotearg.m4: New from gnulib.
	* gnulib.m4: Regenerated.

2005-03-01  Derek Price  <derek@ximbiot.com>

	Update installed GNULIB modules.
	* alloca.m4, allocsa.m4, atexit.m4, bison.m4, clock_time.m4,
	codeset.m4, dirname.m4, dos.m4, eealloc.m4, eoverflow.m4, exitfail.m4,
	extensions.m4, fnmatch.m4, getcwd.m4, getdate.m4, gethostname.m4,
	getline.m4, getndelim2.m4, getnline.m4, getopt.m4, getpagesize.m4,
	getpass.m4, gettext.m4, gettime.m4, gettimeofday.m4, glibc21.m4,
	gnulib.m4, iconv.m4, intdiv0.m4, intmax.m4, intmax_t.m4,
	inttypes-pri.m4, inttypes_h.m4, lcmessage.m4, lib-ld.m4, lib-link.m4,