@@ -1,3 +1,7 @@
+2005-05-10  Derek Price  <derek@ximbiot.com>
+
+	* getopt.m4, stat-macros.m4: Update from GNULIB.
+
 2005-05-06  Derek Price  <derek@ximbiot.com>
 
 	* getopt.m4: Update from GNULIB.  Closes cvshome.org issue #248.
